--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" data-infinite-wrapper>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
